tests/fail/fail_text_binary_operation.kr
fn inisiu(u64 _tmp3, u64 y0, nter _tmp1) {
    mostran('linha\n773' + sin);
    dipoz f64 a5;
}
